--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
+h1 {
+  font-family: "Merriweather", serif;
+  font-size: 32px;
+}
 /* Fonts from Google Fonts - more at https://fonts.google.com */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
 
 body {
-  background-color: white;
+  background-color: skyblue;
   font-family: "Open Sans", sans-serif;
   padding: 5px 25px;
   font-size: 18px;
   margin: 30px;
-  color: #589;
+  color: navy
+;
 }
-
+element 
 h1 {
-  font-family: "Merriweather", serif;
-  font-size: 32px;
+  font-family: 'Pacifico', cursive;
+  font-size: 34px;
+  font-style: normal;
+  font-weight: bold;
+  element 
 }
 
       
